缩减jre大小